2008-09-09  Matthias Wimmer  <m@tthias.eu>

    * resolver/resolver.cc: started work on lwresd client resolver
    * resolver/resolver.h: same
    * jabberd/jabberd.h: same
    * jabberd/instance_base.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/socket.cc: same
    * jabberd/mio_xml.cc: sanity change

2008-09-08  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_roster.cc: fix duplicate roster item problem
    * jabberd/lib/jabberdlib.h: better handling of new session control
    * jabberd/deliver.cc: same
    * jabberd/xdb.cc: fix problem with fixed puffer for printing integer
    	(problem reported by Vince Negri)

2008-09-07  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberid.cc: fix UTF-8 handling in JabberIDs
    * jsm/modules/mod_roster.cc: start fixing duplicate roster item problem
    * jabberd/jabberd.h: fixing problem with dynamic routing
    * jabberd/base/base_connect.cc: same
    * jabberd/base/base_accept.cc: same
    * jabberd/deliver.cc: same

2008-05-05  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_tls.cc: patch by Martin Matuschka to support newer GnuTLS

2008-04-30  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.h: removing the xmlnode vattrib functions
    * jabberd/config.cc: same
    * jabberd/lib/xmlnode.cc: same
    * jabberd/lib/jid.cc: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/base/base_load.cc: same
    * jsm/jsm.cc: same
    * dnsrv/dnsrv.cc: same

2008-04-29  Matthias Wimmer  <m@tthias.eu>

    * jsm/serialization.cc: removing string spool functions, using
	C++ standard std::ostringstream instead
    * jsm/modules/mod_xml.cc: same
    * jsm/modules/mod_auth_digest.cc: same
    * jsm/modules/mod_browse.cc: same
    * jsm/modules/mod_disco.cc: same
    * jsm/modules/mod_privacy.cc: same
    * jsm/modules/mod_roster.cc: same
    * jsm/modules/mod_offline.cc: same
    * jsm/modules/mod_register.cc: same
    * jsm/modules/mod_version.cc: same
    * jsm/modules/mod_admin.cc: same